plugins {
    id 'java'
    id 'application'
}

group = 'com.catalog'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(project(":application"))
    implementation(project(":infrastructure"))
    implementation(project(":domain"))
    implementation group: 'io.vavr', name: 'vavr', version: '1.0.0-alpha-4'
}

